--- a/styles.css
+++ b/styles.css
@@ -185,14 +185,14 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
     font-size: 1.8rem;
     letter-spacing: 6px;
-    display: block;
-    margin-bottom: 0.5rem;
+    display: inline;
+    margin-right: 0.5rem;
     font-weight: 300;
 }
 
 .hero-name .last-name {
-    font-size: 5rem;
-    display: block;
+    font-size: 1.8rem;
+    display: inline;
     line-height: 1.1;
     color: #2E3B5D;
     font-weight: 300;
@@ -850,7 +850,7 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .hero-name .last-name {
-        font-size: 2.8rem;
+        font-size: 1.2rem;
     }
     
     .hero-ampersand {
