--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .script-font {
-    font-family: 'Playfair Display', serif;
-    font-weight: 300;
-    font-style: italic;
-    letter-spacing: 2px;
+    font-family: 'Allura', cursive;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 1px;
 }
 
 /* Loading Screen */
@@ -183,7 +183,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .hero-name .first-name {
     text-transform: uppercase;
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     letter-spacing: 6px;
     display: inline;
     margin-right: 0.5rem;
@@ -191,12 +191,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-name .last-name {
-    font-size: 1.8rem;
+    font-size: 2.8rem;
     display: inline;
     line-height: 1.1;
     color: #2E3B5D;
-    font-weight: 300;
-    letter-spacing: 3px;
+    font-weight: 400;
+    letter-spacing: 1px;
     opacity: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -207,7 +207,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3.5rem;
     margin: 0;
     padding-bottom: 1rem;
-    color: #7888A8;
+    color: #2E3B5D;
     font-family: 'Playfair Display', serif;
     font-weight: 300;
     font-style: italic;
@@ -846,12 +846,12 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .hero-name .first-name {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         letter-spacing: 3px;
     }
     
     .hero-name .last-name {
-        font-size: 1.2rem;
+        font-size: 1.8rem;
     }
     
     .hero-ampersand {
