--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .script-font {
-    font-family: 'Allura', cursive;
+    font-family: 'Alex Brush', cursive;
     font-weight: 400;
     font-style: normal;
     letter-spacing: 1px;
