--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     background-color: #fdfcfb;
     overflow-x: hidden;
     font-weight: 400;
+    font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -22,6 +23,11 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     line-height: 1.3;
     letter-spacing: 1px;
+    font-style: normal;
+}
+
+p, span, div, em {
+    font-style: normal !important;
 }
 
 .script-font {
@@ -210,7 +216,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #2E3B5D;
     font-family: 'Playfair Display', serif;
     font-weight: 300;
-    font-style: italic;
+    font-style: normal;
     opacity: 0.85;
 }
 
@@ -649,7 +655,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.2rem;
     color: #5B6B8C;
     margin-bottom: 3rem;
-    font-style: italic;
+    font-style: normal;
     position: relative;
     z-index: 2;
 }
