--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body {
     background-color: #fdfcfb;
     overflow-x: hidden;
     font-weight: 400;
-    font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -23,11 +22,6 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     line-height: 1.3;
     letter-spacing: 1px;
-    font-style: normal;
-}
-
-p, span, div, em {
-    font-style: normal !important;
 }
 
 .script-font {
@@ -216,7 +210,7 @@ p, span, div, em {
     color: #2E3B5D;
     font-family: 'Playfair Display', serif;
     font-weight: 300;
-    font-style: normal;
+    font-style: italic;
     opacity: 0.85;
 }
 
@@ -655,7 +649,7 @@ p, span, div, em {
     font-size: 1.2rem;
     color: #5B6B8C;
     margin-bottom: 3rem;
-    font-style: normal;
+    font-style: italic;
     position: relative;
     z-index: 2;
 }
