--- a/styles.css
+++ b/styles.css
@@ -371,7 +371,7 @@ p, span, div, em {
 
 .section-logo {
     text-align: center;
-    margin-bottom: 0;
+    margin-bottom: -2rem;
 }
 
 .wedding-logo-img {
