Change to title case: Welcome to our Wedding
- Changed 'welcome to our wedding' to 'Welcome to our Wedding'
- Removed text-transform: lowercase from CSS
- Now displays in proper title case
- More formal and elegant presentation

--- a/styles.css
+++ b/styles.css
@@ -352,7 +352,7 @@ p, span, div, em {
     font-size: 2.8rem;
     font-weight: 300;
     letter-spacing: 1px;
-    text-transform: lowercase;
+    text-transform: none;
     display: block;
     margin-top: 0.5rem;
     line-height: 1.2;
