--- a/styles.css
+++ b/styles.css
@@ -826,8 +826,12 @@ p, span, div, em {
         font-size: 2.5rem;
     }
     
+    .section-subtitle-inline {
+        font-size: 2rem;
+    }
+    
     .section-subtitle {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     
     .folder {
@@ -948,7 +952,11 @@ p, span, div, em {
     }
     
     .section-subtitle-inline {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
+    }
+    
+    .section-subtitle {
+        font-size: 1rem;
     }
     
     .wedding-logo-img {
